[package]
name = "hcegui"
version = "0.1.1"
authors = ["Andrew Farkas <hellop@ajfarkas.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.86"
description = "HactarCE's egui utilities"
repository = "https://github.com/HactarCE/hcegui/"
keywords = ["egui", "gui"]
categories = ["gui"]

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
if_then_some_else_none = "warn"
type_complexity = "allow"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

[dependencies]
egui = { version = "0.33", default-features = false }
eframe = { version = "0.33", optional = true }        # used for demo

[features]
ansi = []
dnd = []
all = ["ansi", "dnd"]
demo = ["all", "dep:eframe"]

[[bin]]
name = "demo"
required-features = ["demo"]

[package.metadata.docs.rs]
features = ["all"]
